# University-Work

./: README.md  reference_manual_document.docx
000-Data-Structures/: Makefile  README.md
000-utils/: Makefile
001-Utility-Methods/: README.md
01-random/: Makefile  timeutil.c
02-strings/: string
APCLab/: CSC207A_Laboratory Manual.docx  practice.hs
Assignment-SEM03-02-2018/CSC202A/InsertionSort/: CMakeLists.txt  database.c  main.c  vector.c
DSALab/: a.out  hello.c
DSALab/04-infix-postfix/: CMakeLists.txt  Makefile  exp_eval.c  exp_eval.h  infix2postfix  input_helper.c  input_helper.h  main.c  stack.c  stack.h  vector.c  vector.h
DSALab/04-infix-postfix/documentation/: lab_04-infix-postfix.docx
DSALab/05-linked-lists/: CMakeLists.txt  Makefile  linked_list.c  linked_list.h  main.c
DSALab/05-linked-lists/documentation/: lab_05-linked-lists.docx  ~$b_05-linked-lists.docx
DSALab/06-queues-stacks-using-linked-lists/: CMakeLists.txt  OUTPUT.txt  lab-06.docx  linked_list.c  linked_list.h  main.c  ~$lab-06.docx
LDLab/: CSC206A-Laboratory Manual.docx  LD Lab 4 to 7.docx  XOR_GATE.circ
MATLAB/: 06-dec.mlx  B_BSC207A.docx  H_Analysis.m  complex_fourier.mlx  complex_series.mlx  complex_test.mlx  fourier_series.m  fourier_series.mlx  fs_pw.m  h_anal_2.mlx  harmonic_analysis.m  harmonic_analysis.mlx  hseries_test.mlx  inbuilt_functions.mlx  laplacetransform.mlx  math_roses.m  periodic_functions_chutiyappa.m  piecewise_plot.mlx
factorial/: a.out  main.c
fibonacci/: a.out  recursive.c  timeutil.c  timeutil.h
lcm/: a.out  main2.c
natural/: a.out  recursive.c
tutorial/: debug_helper.h  input_helper.c  (+2 more)
(+387 files in other folders)
